# predict_covid

./: .gitignore  EDA.ipynb  EDA.md  LICENSE  ML.ipynb  ML.md  READme.md  eda2.ipynb  eda2.md  environment.yml  ml_stacking.ipynb  ml_stacking.md  notes_sources.txt  pyproject.toml  requirements.txt
data/: 2021_ES_Region_Mobility_Report.csv  holiday_spain.csv  iso_provinces.xlsx  location.csv  movement.xls  other_deseases.xlsx  population_total.csv  state_pop.csv
src/cov/: __init__.py
